--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,37 @@
-node_modules
-dist
-.next
-.env*
-.terraform
-terraform.tfstate*
-lambda.zip
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Build outputs
+dist/
+.next/
+out/
+*.log
+
+# Env files
+.env
+.env.local
+.env.*.local
+
+# AWS / Terraform
+.terraform/
+*.tfstate
+*.tfstate.*
+crash.log
+override.tf
+override.tf.json
+.terraform.lock.hcl
+
+# Lambda artifacts
+backend/lambda.zip
+
+# VSCode / IDE
+.vscode/
+.idea/
+
+# Mac / Windows
+.DS_Store
+Thumbs.db
